--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,106 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+<ion-header [translucent]="true" mode="ios">
+  <ion-toolbar >
+    <ion-title>Administración de empleados</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="onModalCreate()"> <ion-icon name="add-outline"></ion-icon> </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-searchbar animated="true" placeholder="Buscar empleado" class="animate__animated animate__fadeInUpBig" mode="ios"></ion-searchbar>
+  <ion-list lines="full" class="animate__animated animate__fadeInUpBig" mode="ios">
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>John Doe Ipsum</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="onModalEdit()">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="onAlert()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>John Doe Ipsum</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="onModalEdit()">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="onAlert()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>John Doe Ipsum</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="onModalEdit()">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="onAlert()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>John Doe Ipsum</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="onModalEdit()">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="onAlert()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>John Doe Ipsum</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="onModalEdit()">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="onAlert()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>John Doe Ipsum</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="onModalEdit()">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="onAlert()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
+    <ion-item-sliding>
+      <ion-item>
+        <ion-label>John Doe Ipsum</ion-label>
+      </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option (click)="onModalEdit()">
+          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+        </ion-item-option>
+        <ion-item-option color="danger" (click)="onAlert()">
+          <ion-icon slot="icon-only" name="trash"></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  </ion-list>
 </ion-content>
