Pantalla de perfil realizada, sliding invertido

--- a/src/app/components/modal-edit-profile/modal-edit-profile.component.html
+++ b/src/app/components/modal-edit-profile/modal-edit-profile.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-button (click)="cancel()" [strong]="true" color="danger">Cancelar</ion-button>
     </ion-buttons>
-    <ion-title>Editar empleado</ion-title>
+    <ion-title>Editar perfil</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true" color="success">Aceptar</ion-button>
     </ion-buttons>
@@ -35,29 +35,5 @@
     <ion-label position="stacked" color="primary">Número de telefono</ion-label>
     <ion-input type="number" placeholder="664373218" ></ion-input>
   </ion-item>
-  <ion-item>
-    <ion-label position="stacked" color="primary">Correo electrónico</ion-label>
-    <ion-input type="text" placeholder="john.doe@gmail.com" ></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="stacked" color="primary">Número de control</ion-label>
-    <ion-input type="text" placeholder="2021859" ></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="stacked" color="primary">Género</ion-label>
-    <ion-select  okText="Aceptar" cancelText="Cancelar">
-      <ion-select-option value="1">Masculino</ion-select-option>
-      <ion-select-option value="2">Femenino</ion-select-option>
-      <ion-select-option value="3">Otro</ion-select-option>
-    </ion-select>
-  </ion-item>
-  <ion-item>
-    <ion-label position="stacked" color="primary">Fecha de nacimiento</ion-label>
-    <ion-datetime-button datetime="datetime"></ion-datetime-button>
-    <ion-modal [keepContentsMounted]="true">
-      <ng-template>
-        <ion-datetime id="datetime" presentation="date"></ion-datetime>
-      </ng-template>
-    </ion-modal>
-  </ion-item>
+
 </ion-content>
