--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,7 +14,7 @@
       <ion-item>
         <ion-label>John Doe Ipsum</ion-label>
       </ion-item>
-      <ion-item-options side="end">
+      <ion-item-options side="start">
         <ion-item-option (click)="onModalEdit()">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
@@ -27,7 +27,7 @@
       <ion-item>
         <ion-label>John Doe Ipsum</ion-label>
       </ion-item>
-      <ion-item-options side="end">
+      <ion-item-options side="start">
         <ion-item-option (click)="onModalEdit()">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
@@ -40,7 +40,7 @@
       <ion-item>
         <ion-label>John Doe Ipsum</ion-label>
       </ion-item>
-      <ion-item-options side="end">
+      <ion-item-options side="start">
         <ion-item-option (click)="onModalEdit()">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
@@ -53,7 +53,7 @@
       <ion-item>
         <ion-label>John Doe Ipsum</ion-label>
       </ion-item>
-      <ion-item-options side="end">
+      <ion-item-options side="start">
         <ion-item-option (click)="onModalEdit()">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
@@ -66,7 +66,7 @@
       <ion-item>
         <ion-label>John Doe Ipsum</ion-label>
       </ion-item>
-      <ion-item-options side="end">
+      <ion-item-options side="start">
         <ion-item-option (click)="onModalEdit()">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
@@ -79,7 +79,7 @@
       <ion-item>
         <ion-label>John Doe Ipsum</ion-label>
       </ion-item>
-      <ion-item-options side="end">
+      <ion-item-options side="start">
         <ion-item-option (click)="onModalEdit()">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
@@ -92,7 +92,7 @@
       <ion-item>
         <ion-label>John Doe Ipsum</ion-label>
       </ion-item>
-      <ion-item-options side="end">
+      <ion-item-options side="start">
         <ion-item-option (click)="onModalEdit()">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
