--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -11,32 +11,32 @@
 
 <ion-content [fullscreen]="true" mode="ios">
 
-     <!--informacion del perfil del usuario-->
-      <div class="animate__animated animate__backInUp">
+       <div class="animate__animated animate__backInUp">
 
-      <div class="profileInfo">
+        <!--informacion del perfil del usuario-->
+         <div class="profileInfo">
 
-        <!--imagen de perfil-->
-        <div text-center>
-          <p align="center">
-            <ion-img
-            style="width: 40%; margin-top: 50px;"
-            src="https://ionicframework.com/docs/img/demos/avatar.svg"
-            alt="The Wisconsin State Capitol building in Madison, WI at night">
-            </ion-img>
-          </p>
-        </div>
+           <!--imagen de perfil-->
+           <div text-center>
+               <p align="center">
+                 <ion-img
+                 style="width: 40%; margin-top: 50px;"
+                 src="https://ionicframework.com/docs/img/demos/avatar.svg"
+                 alt="The Wisconsin State Capitol building in Madison, WI at night">
+                 </ion-img>
+               </p>
+           </div>
 
-      <!--carta de informacion del perfil-->
-        <div class="card-body">
-          <div class="user-meta ion-text-center">
-            <h1 class="userName">John Doe Ipsum</h1>
-            <h5 class="company">Coca cola Company</h5>
-          </div>
-        </div>
+         <!--carta de informacion del perfil-->
+           <div class="card-body">
+             <div class="user-meta ion-text-center">
+               <h1 class="userName">John Doe Ipsum</h1>
+               <h5 class="company">Coca cola Company</h5>
+             </div>
+           </div>
 
-        </div>
-      </div>
+         </div>
+       </div>
 
 
       <!--botones de la pantalla del perfil-->
@@ -44,6 +44,7 @@
 
         <div class = "animate__animated animate__backInUp">
 
+          <!--boton de editar perfil-->
           <ion-button
           class="profileButton"
           fill="outline"
@@ -60,6 +61,7 @@
 
         <div class = "animate__animated animate__backInUp">
 
+          <!--boton de cerrar sesión-->
           <ion-button
           class="profileButton"
           fill="outline"
