--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,20 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-md="6" size-lg="4">
+        <ion-text>Hello from a col</ion-text>
+      </ion-col>
+      <ion-col size="12" size-md="6" size-lg="4">
+        <!-- Contenido -->
+      </ion-col>
+      <ion-col size="12" size-md="6" size-lg="4">
+        <!-- Contenido -->
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
