--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -10,97 +10,30 @@
 <ion-content [fullscreen]="true">
   <ion-searchbar animated="true" placeholder="Buscar empleado" class="animate__animated animate__fadeInUpBig" mode="ios"></ion-searchbar>
   <ion-list lines="full" class="animate__animated animate__fadeInUpBig" mode="ios">
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>John Doe Ipsum</ion-label>
+
+    <ion-item-sliding *ngFor="let employee of employees">
+
+      <!--elemento de lista que al darle click muestra la informacion del usuario-->
+      <ion-item (click)="onModalViewEmployeeInfo()">
+        <ion-label>{{employee.name}} {{employee.middle_name}} {{employee.last_name}}</ion-label>
       </ion-item>
+
+      <!--opciones del sliding-->
       <ion-item-options side="start">
-        <ion-item-option (click)="onModalEdit()">
+        <!--opcion de editar -->
+        <ion-item-option (click)="onModalEdit(employee.id)">
           <ion-icon name="create-outline" slot="icon-only"></ion-icon>
         </ion-item-option>
-        <ion-item-option color="danger" (click)="onAlert()">
+        <!--opcion de eliminar-->
+        <ion-item-option color="danger" (click)="onAlert(employee.id)">
           <ion-icon slot="icon-only" name="trash"></ion-icon>
         </ion-item-option>
+
       </ion-item-options>
+
+
     </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>John Doe Ipsum</ion-label>
-      </ion-item>
-      <ion-item-options side="start">
-        <ion-item-option (click)="onModalEdit()">
-          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" (click)="onAlert()">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>John Doe Ipsum</ion-label>
-      </ion-item>
-      <ion-item-options side="start">
-        <ion-item-option (click)="onModalEdit()">
-          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" (click)="onAlert()">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>John Doe Ipsum</ion-label>
-      </ion-item>
-      <ion-item-options side="start">
-        <ion-item-option (click)="onModalEdit()">
-          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" (click)="onAlert()">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>John Doe Ipsum</ion-label>
-      </ion-item>
-      <ion-item-options side="start">
-        <ion-item-option (click)="onModalEdit()">
-          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" (click)="onAlert()">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>John Doe Ipsum</ion-label>
-      </ion-item>
-      <ion-item-options side="start">
-        <ion-item-option (click)="onModalEdit()">
-          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" (click)="onAlert()">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
-    <ion-item-sliding>
-      <ion-item>
-        <ion-label>John Doe Ipsum</ion-label>
-      </ion-item>
-      <ion-item-options side="start">
-        <ion-item-option (click)="onModalEdit()">
-          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-        </ion-item-option>
-        <ion-item-option color="danger" (click)="onAlert()">
-          <ion-icon slot="icon-only" name="trash"></ion-icon>
-        </ion-item-option>
-      </ion-item-options>
-    </ion-item-sliding>
+
 
   </ion-list>
 </ion-content>
