--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,32 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Reportes
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" size-md="6" size-lg="4">
-        <ion-text>Hello from a col</ion-text>
-      </ion-col>
-      <ion-col size="12" size-md="6" size-lg="4">
-        <!-- Contenido -->
-      </ion-col>
-      <ion-col size="12" size-md="6" size-lg="4">
-        <!-- Contenido -->
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <h3>Faltas</h3>
+  <div id="chartContainer">
+    <div id="chContainer1">
+      <h5 style="text-align:center;">Este mes</h5>
+      <div id="chart0" class="chart"></div>
+    </div>
+    <div id="chContainer1">
+      <h5 style="text-align:center;">Ultima semana</h5>
+      <div id="chart1" class="chart"></div>
+    </div>
+    <div id="chContainer2">
+      <h5 style="text-align:center;">Ultimo mes</h5>
+      <div id="chart2" class="chart"></div>
+    </div>
+  </div>
+  
+  <h3 style="text-align: left;">Faltas por dia</h3>
+  <div id="chartStack">
+    <div id="chartStack" class="chart"></div>
+  </div>
+
+  <h3>Faltas</h3>
+  
 
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
