btn back to login added in sign up form

--- a/src/app/auth/signup/signup.page.html
+++ b/src/app/auth/signup/signup.page.html
@@ -114,6 +114,10 @@
       
     </div>
   </form>
-
+  <div class="container-bottom animate__animated animate__lightSpeedInRight ">
+    <ion-text>
+      <p>¿Ya tienes cuenta? <a href="/auth/login">Inicia sesión</a></p>
+    </ion-text>  
+  </div>
 
 </ion-content>
