--- a/src/app/auth/signup/signup.page.scss
+++ b/src/app/auth/signup/signup.page.scss
@@ -9,3 +9,11 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.container-bottom {
+    margin: 0px;
+    flex-direction:column;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
