--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -18,9 +18,8 @@
            <div text-center>
               <p align="center">
                 <ion-img
-                style="width: 20%; margin-top: 50px;"
-                src="https://ionicframework.com/docs/img/demos/avatar.svg"
-                alt="The Wisconsin State Capitol building in Madison, WI at night">
+                style="width: 40%; margin-top: 50px;"
+                src="{{ profile.avatar }}">
                 </ion-img>
               </p>
            </div>
@@ -29,8 +28,8 @@
          <!--carta de informacion del perfil-->
            <div class="card-body">
              <div class="user-meta ion-text-center">
-               <h1 class="userName">John Doe Ipsum</h1>
-               <h5 class="company">Coca cola Company</h5>
+               <h1 class="userName">{{profile.name}} {{profile.middle_name}} {{profile.last_name}}</h1>
+               <h5 class="company">{{profile.company}}</h5>
              </div>
            </div>
 
