--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,6 +1,27 @@
-.chart-container{
+/* Ejemplo de una media query para pantallas pequeñas */
+@media (max-width: 768px) {
+  /* Estilos para pantallas pequeñas */
+}
 
-  width: 50%;
-  height: 50%;
+#chartContainer {
+
+
+
+}
+
+.chart {
+
+  flex: 1;
+  margin-right: 10px;
+
+}
+
+/* Media Query para pantallas más pequeñas */
+@media screen and (max-width: 768px) {
+
+  .chart {
+    flex-basis: 100%; /* Hace que los gráficos ocupen todo el ancho en pantallas pequeñas */
+    margin-bottom: 10px; /* Agrega un margen inferior entre gráficos en pantallas pequeñas */
+  }
 
 }
