--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,34 +1,34 @@
-
-
 <ion-content [fullscreen]="true">
+
   <ion-header collapse="condense">
     <ion-toolbar>
+      <ion-title size="large">Tab 2</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <h3>Faltas</h3>
+
   <div id="chartContainer">
+
+    <!--GRAFICA 1-->
     <div id="chContainer1">
-      <h5 style="text-align:center;">Este mes</h5>
       <div id="chart0" class="chart"></div>
     </div>
+
+    <!--GRAFICA 2-->
     <div id="chContainer1">
-      <h5 style="text-align:center;">Ultima semana</h5>
       <div id="chart1" class="chart"></div>
     </div>
+
+    <!--GRAFICA 3-->
     <div id="chContainer2">
-      <h5 style="text-align:center;">Ultimo mes</h5>
       <div id="chart2" class="chart"></div>
     </div>
+
   </div>
-  
-  <h3 style="text-align: left;">Faltas por dia</h3>
+
   <div id="chartStack">
     <div id="chartStack" class="chart"></div>
   </div>
-
-  <h3>Faltas</h3>
-  
 
 
 </ion-content>
