websocket implementation added

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -26,4 +26,7 @@
   </div>
 
 
+<ion-content [fullscreen]="true">
+  <ion-button (click)="openUrl()" expand="block">Open URL</ion-button>
+  
 </ion-content>
