--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,12 +1,11 @@
 /* Ejemplo de una media query para pantallas pequeñas */
+
 @media (max-width: 768px) {
   /* Estilos para pantallas pequeñas */
 }
 
 #chartContainer {
-
-
-
+  color: #000000;
 }
 
 .chart {
@@ -24,4 +23,46 @@
     margin-bottom: 10px; /* Agrega un margen inferior entre gráficos en pantallas pequeñas */
   }
 
+}
+
+
+ion-col {
+  padding: 0;
+  margin: 0;
+  font-weight: bold;
+  text-align: center;
+}
+
+ion-card{
+  font-family: QuickSand;
+}
+
+.entryData{
+  font-size: 24px;
+  color: #1B305B;
+}
+
+.labelData{
+  font-size: 12px;
+  color: #000000;
+}
+
+.ButtonIcon{
+  position: absolute;
+  right: 10px;
+}
+
+.Button{
+  padding: 11px;
+  height: 80px;
+  margin-bottom: 0px;
+  size: large;
+}
+
+.ButtonText{
+  text-align: left;
+  position: absolute;
+  font-weight: bold;
+  font-family: QuickSand;
+  left: 10px;
 }
