--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -68,6 +68,7 @@
   class="Button"
   fill="outline"
   expand="block"
+  (click)="openUrl()"
   >
   <ion-icon slot="end" class="ButtonIcon" name="play-skip-forward-circle-outline" size="large"></ion-icon>
   <div class="ButtonText">
@@ -77,7 +78,6 @@
   </ion-button>
 
 
-<ion-content [fullscreen]="true">
-  <ion-button (click)="openUrl()" expand="block">Open URL</ion-button>
-  
+
+
 </ion-content>
