--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -64,18 +64,21 @@
 
 
   <!--boton de editar perfil-->
-  <ion-button
-  class="Button"
-  fill="outline"
-  expand="block"
-  (click)="openUrl()"
-  >
-  <ion-icon slot="end" class="ButtonIcon" name="play-skip-forward-circle-outline" size="large"></ion-icon>
-  <div class="ButtonText">
-    <ion-text>Empezar a registrar<br>
-       entradas/salidas</ion-text>
+  <div class="customPadding">
+    <ion-button
+    class="Button"
+    fill="outline"
+    expand="block"
+    (click)="openUrl()"
+    >
+    <ion-icon slot="end" class="ButtonIcon" name="play-skip-forward-circle-outline" size="large"></ion-icon>
+    <div class="ButtonText">
+      <ion-text>Empezar a registrar<br>
+         entradas/salidas</ion-text>
+    </div>
+    </ion-button>
   </div>
-  </ion-button>
+
 
 
 
