--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,30 +1,3 @@
-/* Ejemplo de una media query para pantallas pequeñas */
-
-@media (max-width: 768px) {
-  /* Estilos para pantallas pequeñas */
-}
-
-#chartContainer {
-  color: #000000;
-}
-
-.chart {
-
-  flex: 0;
-  margin-right: 0px;
-
-}
-
-/* Media Query para pantallas más pequeñas */
-@media screen and (max-width: 768px) {
-
-  .chart {
-    flex-basis: 100%; /* Hace que los gráficos ocupen todo el ancho en pantallas pequeñas */
-    margin-bottom: 0px; /* Agrega un margen inferior entre gráficos en pantallas pequeñas */
-  }
-
-}
-
 
 ion-col {
   padding: 0;
@@ -35,6 +8,11 @@ ion-col {
 
 ion-card{
   font-family: QuickSand;
+}
+
+.customPadding{
+  padding: 11px;
+  margin: 0;
 }
 
 .entryData{
@@ -53,7 +31,6 @@ ion-card{
 }
 
 .Button{
-  padding: 11px;
   height: 80px;
   size: large;
 }
