Border implementado en tab 1

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,7 +8,7 @@
 
 <ion-content [fullscreen]="true" mode="ios">
 
-  <ion-card>
+  <ion-card class="border" no-shadow>
 
     <ion-card-header>
 
@@ -59,15 +59,15 @@
 
 
 
-  <div id="chart0" class="chart" ></div>
+  <div id="chart0" class="chart border"></div>
 
 
 
   <!--boton de editar perfil-->
-  <div class="customPadding">
+  <div class="customMargin">
     <ion-button
-    class="Button"
-    fill="outline"
+    class="Button border"
+    fill="clear"
     expand="block"
     (click)="openUrl()"
     >
