estetica de la grafica

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,14 +1,12 @@
+
 .border{
   margin: 11px;
   border: 1px solid #1B305B;
   border-radius: 10px;
   border-width: 2px;
+  padding: 0;
 }
 
-.chart {
-  flex: 1;
-  margin-right: 10px;
-}
 
 
 ion-col {
