--- a/src/global.scss
+++ b/src/global.scss
@@ -30,3 +30,7 @@
   font-family: 'Quicksand';
   src: url('./assets/fonts/Quicksand-VariableFont_wght.ttf') format('truetype');
 }
+
+ion-title{
+  font-family: QuickSand;
+}
