Img. perfil redonda, nuevos botones de perfil

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,7 +7,6 @@
 </ion-header>
 
 <ion-content [fullscreen]="true" mode="ios">
-
   <ion-card class="border" no-shadow>
 
     <ion-card-header>
@@ -24,13 +23,14 @@
 
         <ion-row >
           <ion-col class="entryData">
-            254
+            <!--faltas-->
+            1119
           </ion-col >
           <ion-col class="entryData">
-            300
+            9980
           </ion-col>
           <ion-col class="entryData">
-            100
+            980
           </ion-col>
         </ion-row>
 
