--- a/src/global.scss
+++ b/src/global.scss
@@ -34,3 +34,11 @@
 ion-title{
   font-family: QuickSand;
 }
+
+ion-label{
+  font-family: QuickSand;
+}
+
+ion-searchbar{
+  font-family: QuickSand;
+}
