Modificaciones de funciones

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -79,7 +79,7 @@
             class="Button border"
             fill="clear"
             expand="block"
-            (click)="onModalEdit()"
+            (click)="logout()"
             >
             <ion-icon slot="end" class="ButtonIcon" name="log-out" size="large"></ion-icon>
             <div class="ButtonText">
