--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,12 +1,28 @@
+.homeCardHeader{
+  height: 45%;
+}
 
-.border{
+.homeCardContent{
+  height: 55%;
+}
+
+.entryData{
+  font-size: 24px;
+  color: #1B305B;
+}
+
+.labelData{
+  font-size: 12px;
+}
+
+.homeBorder{
+  height: 33%;
   margin: 11px;
   border: 1px solid #1B305B;
   border-radius: 10px;
   border-width: 2px;
   padding: 0;
 }
-
 
 ion-col {
   padding: 0;
@@ -24,15 +40,7 @@ ion-card{
   margin: 0;
 }
 
-.entryData{
-  font-size: 24px;
-  color: #1B305B;
-}
 
-.labelData{
-  font-size: 12px;
-  color: #000000;
-}
 
 .ButtonIcon{
   position: absolute;
