Modificaciones de relacion de aspecto

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -35,12 +35,6 @@ ion-card{
   font-family: QuickSand;
 }
 
-.customMargin{
-  margin: 11px;
-  margin: 0;
-}
-
-
 
 .ButtonIcon{
   position: absolute;
@@ -48,7 +42,7 @@ ion-card{
 }
 
 .Button{
-  height: 80px;
+  height: 26%;
   size: large;
 }
 
