nuevo diseño para info de empleado

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,9 +1,9 @@
-<ion-header [translucent]="true" mode="ios">
-  <ion-toolbar>
-    <ion-title>
-      Inicio
-    </ion-title>
-  </ion-toolbar>
+<ion-header [translucent]="false" mode="ios">
+    <ion-toolbar>
+      <ion-title>
+        Inicio
+      </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" mode="ios">
@@ -17,6 +17,7 @@
       <ion-card-subtitle style="text-align: center;">Registro de entradas</ion-card-subtitle>
 
     </ion-card-header>
+
 
     <ion-card-content class="homeCardContent">
 
