--- a/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
+++ b/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
@@ -1,86 +1,67 @@
-<ion-header>
+<ion-header mode = "ios">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="cancel()" [strong]="true" color="danger">Cancelar</ion-button>
     </ion-buttons>
-    <ion-title>informacion de empleado</ion-title>
+    <ion-title>Empleado</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true" color="success">Aceptar</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content [fullscreen]="true" mode="ios" class="ion-padding">
 
 
 
+    <div class="employeInfo">
+
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title style="text-align: center; top:10px;">{{employeeName}} {{employeeFirstName}} {{employeeLastName}}</ion-card-title>
+          <ion-card-subtitle style="text-align: center; top:10px;">Empleado</ion-card-subtitle>
+          <!--FOTO DE PERFIL-->
+        <div class="card">
+          <div class="header">
+            <div class="avatar">
+              <img src="{{employeeAvatar}}" alt="">
+            </div>
+          </div>
+        </div>
+
+        </ion-card-header>
+        <ion-card-content>
+
+                <!--CORREO ELECTRONICO-->
+            <ion-item lines = "none">
+              <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">Email</ion-label>
+              <ion-input [readonly]="true">{{employeeEmail}}</ion-input>
+            </ion-item>
+
+               <!--NUMERO DE CONTROL-->
+            <ion-item lines = "none">
+               <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">Numero de control</ion-label>
+               <ion-input [readonly]="true" >{{employeeControlNumber}}</ion-input>
+            </ion-item>
+
+              <!--GENERO-->
+            <ion-item lines="none">
+              <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">Genero</ion-label>
+              <ion-input [readonly]="true" >{{employeeGender}}</ion-input>
+            </ion-item>
+
+              <!--FECHA DE NACIMIENTO-->
+            <ion-item lines="none">
+                 <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">Fecha de nacimiento</ion-label>
+                 <ion-input [readonly]="true" >{{employeeBirthDate}}</ion-input>
+            </ion-item>
 
 
-  <!--FOTO DE PERFIL-->
-  <ion-item lines="none">
-    <ion-label position="stacked" color="primary">Foto de perfil</ion-label>
-    <ion-img
-    style="width: 40%; margin-top:8px;"
-    src="https://ionicframework.com/docs/img/demos/avatar.svg"
-    alt="The Wisconsin State Capitol building in Madison, WI at night">
-    </ion-img>
-  </ion-item>
+        </ion-card-content>
+      </ion-card>
 
-  <!--NOMBRE DEL USUARIO-->
-  <ion-item>
-    <ion-label position="stacked" color="primary">Nombre</ion-label>
-    <ion-input labelPlacement="fixed" type="text">Juan Jose</ion-input>
-  </ion-item>
 
-  <!--APELLIDO PATERNO-->
-  <ion-item>
-    <ion-label position="stacked" color="primary">Apellido paterno</ion-label>
-    <ion-input type="text" placeholder="Doe" ></ion-input>
-  </ion-item>
-
-  <!--AEPLLIDO MATERNO-->
-  <ion-item>
-    <ion-label position="stacked" color="primary">Apellido materno</ion-label>
-    <ion-input type="text" placeholder="Ipsum" ></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label position="stacked" color="primary">Número de telefono</ion-label>
-    <ion-input type="number" placeholder="664373218" ></ion-input>
-  </ion-item>
-
-  <!--CORREO ELECTRONICO-->
-  <ion-item>
-    <ion-label position="stacked" color="primary">Correo electrónico</ion-label>
-    <ion-input type="text" placeholder="john.doe@gmail.com" ></ion-input>
-  </ion-item>
-
-  <!--NUMERO DE CONTROL-->
-  <ion-item>
-    <ion-label position="stacked" color="primary">Número de control</ion-label>
-    <ion-input type="text" placeholder="2021859" ></ion-input>
-  </ion-item>
-
-  <!--GENERO-->
-  <ion-item>
-    <ion-label position="stacked" color="primary">Género</ion-label>
-    <ion-select  okText="Aceptar" cancelText="Cancelar">
-      <ion-select-option value="1">Masculino</ion-select-option>
-      <ion-select-option value="2">Femenino</ion-select-option>
-      <ion-select-option value="3">Otro</ion-select-option>
-    </ion-select>
-  </ion-item>
-
-  <!--FECHA DE NACIMIENTO-->
-  <ion-item>
-    <ion-label position="stacked" color="primary">Fecha de nacimiento</ion-label>
-    <ion-datetime-button datetime="datetime"></ion-datetime-button>
-    <ion-modal [keepContentsMounted]="true">
-      <ng-template>
-        <ion-datetime id="datetime" presentation="date"></ion-datetime>
-      </ng-template>
-    </ion-modal>
-  </ion-item>
+    </div>
 
 
 
