--- a/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
+++ b/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
@@ -1,18 +1,15 @@
 <ion-header mode = "ios">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="cancel()" [strong]="true" color="danger">Cancelar</ion-button>
+
+      <ion-button (click)="cancel()" [strong]="true" color="primary"> <ion-icon slot="start" name="arrow-back-outline"></ion-icon>Volver</ion-button>
     </ion-buttons>
-    <ion-title>Empleado</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="confirm()" [strong]="true" color="success">Aceptar</ion-button>
-    </ion-buttons>
+    <ion-title>{{employeeName}}</ion-title>
+
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true" mode="ios" class="ion-padding">
-
-
 
     <div class="employeInfo">
 
@@ -31,11 +28,21 @@
 
         </ion-card-header>
         <ion-card-content>
+          <ion-list>
+            <!--NUM CELULAR-->
+            <ion-item lines = "none">
+
+              <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">No. Celular</ion-label>
+              <ion-input [readonly]="true">{{employeePhone}}</ion-input>
+
+            </ion-item>
 
                 <!--CORREO ELECTRONICO-->
             <ion-item lines = "none">
+
               <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">Email</ion-label>
               <ion-input [readonly]="true">{{employeeEmail}}</ion-input>
+
             </ion-item>
 
                <!--NUMERO DE CONTROL-->
@@ -56,7 +63,7 @@
                  <ion-input [readonly]="true" >{{employeeBirthDate}}</ion-input>
             </ion-item>
 
-
+          </ion-list>
         </ion-card-content>
       </ion-card>
 
