--- a/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
+++ b/src/app/components/modal-view-employee-info/modal-view-employee-info.component.html
@@ -9,11 +9,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true" mode="ios" class="ion-padding">
+<ion-content [fullscreen]="true" mode="ios" >
 
-    <div class="employeInfo">
 
-      <ion-card>
+      <ion-card style=" box-shadow: none !important;">
         <ion-card-header>
           <ion-card-title style="text-align: center; top:10px;">{{employeeName}} {{employeeFirstName}} {{employeeLastName}}</ion-card-title>
           <ion-card-subtitle style="text-align: center; top:10px;">Empleado</ion-card-subtitle>
@@ -33,7 +32,7 @@
             <ion-item lines = "none">
 
               <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">No. Celular</ion-label>
-              <ion-input [readonly]="true">{{employeePhone}}</ion-input>
+              <ion-input  [readonly]="true">{{employeePhone}}</ion-input>
 
             </ion-item>
 
@@ -60,15 +59,12 @@
               <!--FECHA DE NACIMIENTO-->
             <ion-item lines="none">
                  <ion-label style="font-family: QuickSand; font-weight: 600;" position="stacked" color="primary">Fecha de nacimiento</ion-label>
-                 <ion-input [readonly]="true" >{{employeeBirthDate}}</ion-input>
+                 <ion-input [autofocus]="false" [readonly]="true" >{{employeeBirthDate}}</ion-input>
             </ion-item>
 
           </ion-list>
         </ion-card-content>
       </ion-card>
-
-
-    </div>
 
 
 
